3889.	[port]		hurd: configure fixes as per:
			https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=746540

3887.	[cleanup]	Make all static symbols in rbtdb64 end in "64" so
			they are easier to use in a debugger. [RT #36373]

	--- 9.8.8b1 released ---

3884.	[protocol]	Add CDS and CDNSKEY record types. [RT #36333]

3881.	[bug]		Address memory leak with UPDATE error handling.
			[RT #36303]

3880.	[test]		Update ans.pl to work with new TSIG support in
			Net::DNS; add additional Net::DNS version prerequisite
			checks. [RT #36327]

3878.	[bug]		Using the incorrect filename for a DLZ module
			caused a segmentation fault on startup. [RT #36286]

3874.	[test]		Check that only "check-names master" is needed for
			updates to be accepted.

3873.	[protocol]	Only warn for SPF without TXT spf record. [RT #36210]

3872.	[bug]		Address issues found by static analysis. [RT #36209]

3871.	[bug]		Don't publish an activated key automatically before
			its publish time. [RT #35063]

3868.	[bug]		isc_mem_setwater incorrectly cleared hi_called
			potentially leaving over memory cleaner running.
			[RT #35270]

3866.	[bug]		Named could die on disk full in generate_session_key.
			[RT #36119]

3864.	[bug]		RPZ didn't work well when being used as forwarder.
			[RT #36060]

3862.	[cleanup]	Return immediately if we are not going to log the
			message in ns_client_dumpmessage.

3861.	[bug]		Benign missing isc_buffer_availablelength check in
			dns_message_pseudosectiontotext.  [RT #36078]

3860.	[bug]		ioctl(DP_POLL) array size needs to be determined
			at run time as it is limited to {OPEN_MAX}.
			[RT #35878]

3858.	[bug]		Disable GCC 4.9 "delete null pointer check".
			[RT #35968]

3857.	[bug]		Make it harder for a incorrect NOEDNS classification
			to be made. [RT #36020]

3855.	[bug]		Limit smoothed round trip time aging to no more than
			once a second. [RT #32909]

3854.	[cleanup]	Report unrecognized options, if any, in the final
			configure summary. [RT #36014]
