@@ -75,4 +75,10 @@ zone "nosoa.secure.example" {
 	file "nosoa.secure.example.db";
 };
 
+zone "split-rrsig" {
+	type master;
+	file "split-rrsig.db.signed";
+	allow-update { any; };
+};
+
 include "trusted.conf";
